# ml-cookiecutter-template

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/docs/: Makefile
{{cookiecutter.repo_name}}/src/configs/dev/: configs_dev.yaml
{{cookiecutter.repo_name}}/src/utils/: config_parser.py  constants.py  helpers.py
